# bazel-python-demo

./: .bazelrc  .env  .gitignore  BUILD.bazel  Pipfile  README.md  WORKSPACE.bazel  coverage.sh  diff.sh  format.sh  lock  publish.sh  pyproject.toml  requirements-lock.txt  requirements_lock.txt  run.sh  stamp.sh
.circleci/: config.yml
experiment/application/: BUILD.bazel  __init__.py  __main__.py
infra/: README.md  deploy  dns  docker-compose.yml  down  up
infra/apps/: kustomization.yaml
infra/apps/user-api/: deployment.yaml  service.yaml
infra/cluster/: cluster.yaml
infra/cluster/kustomize/: kustomization.yaml
infra/cluster/kustomize/ingress-nginx/: kustomization.yaml
infra/cluster/kustomize/pypi/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  persistent-volume.yaml  service.yaml
infra/cluster/kustomize/pypi/config/: README.md
infra/cluster/kustomize/user-api/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
infra/config/pypi/: .htpasswd
infra/hosts/: README.md  hosts.txt
src/core/api/: BUILD.bazel  __init__.py  api.py  api_test.py  middleware.py  models.py
src/core/elasticsearch/: BUILD.bazel  client.py  configuration.py
src/core/elasticsearch/content_type/: base.py  index.py  recipe.py
src/core/elasticsearch/tests/: conftest.py  test_client.py
src/core/elasticsearch/tests/content_type/: test_base.py  test_index.py
src/core/logging/: BUILD.bazel  __init__.py  __init__.pyi  configuration.py  logging_test.py
src/users/api/: BUILD.bazel  __init__.py  __main__.py  requirements-override.txt
src/users/api/tests/: conftest.py  docker-compose.yml  test_retrieve_users.py
src/users/content_type/: BUILD.bazel  __init__.py  content_type.py  content_type_test.py
tools/black/: BUILD.bazel  black_wrapper.py  defs.bzl  pyproject.toml
tools/coverage/lcov/: repositories.bzl
tools/docker/: BUILD.bazel  rules.bzl
tools/environment/: defs.bzl
tools/format/: BUILD.bazel  apply.py  aspects.bzl
tools/go/: repositories.bzl
tools/inspection/build-graph/: BUILD.bazel  README.md  diff.py  hash.py
tools/inspection/changes/: BUILD.bazel  diff_build_graph.py  hash_build_graph.py
tools/isort/: BUILD.bazel  defs.bzl  pyproject.toml
tools/mypy/: BUILD.bazel  defs.bzl  mypy.ini  mypy_wrapper.py  sitepkg_loader.py
tools/packaging/docker/: BUILD.bazel  repositories.bzl  rules.bzl
tools/packaging/wheel/: defs.bzl
tools/pipenv/: defs.bzl
tools/pipenv/pipenv_lock/: pipenv_lock.py
tools/pipenv_repository/: defs.bzl  repositories.bzl
tools/pylint/: defs.bzl  pylint_wrapper.py
tools/pytest/: BUILD.bazel  defs.bzl  pytest.ini  pytest_wrapper.py
tools/python/base/: entrypoint.bzl  interpreter.bzl  library.bzl  repositories.bzl  utils.bzl
tools/python/black/: BUILD.bazel  defs.bzl
tools/python/isort/: defs.bzl
tools/python/mypy/: defs.bzl  sitepkg_loader.py
tools/python/pipenv/: BUILD.bazel  defs.bzl  repositories.bzl
tools/python/pipenv/helpers/: generate-pipenv-tool-deps.py
tools/python/pipenv/pipenv_lock/: pipenv_lock.py
tools/python/pycodestyle/: BUILD.bazel  pycodestyle_wrapper.py  rules.bzl
tools/python/pydocstyle/: BUILD.bazel  pydocstyle_wrapper.py  rules.bzl
tools/python/pylint/: BUILD.bazel  defs.bzl
tools/python/pytest/: defs.bzl
tools/twine/: BUILD.bazel  twine_wrapper.py
tools/wheel/: defs.bzl
