load("@rules_python//python:defs.bzl", "py_runtime_pair")

py_runtime(
    name="python_runtime_3_10_2",
    interpreter_path="/home/jack/.pyenv/versions/3.10.2/bin/python",
    python_version="PY3",
)

py_runtime_pair(
    name="python_runtime",
    py2_runtime=None,
    py3_runtime=":python_runtime_3_10_2",
)

toolchain(
    name="python_toolchain",
    toolchain=":python_runtime",
    toolchain_type="@rules_python//python:toolchain_type",
)
