workspace(
    name="bazel-test",
)

# Make secrets available for build and publish. These should be set on the host.
load("//tools/environment:defs.bzl", "environment")
environment(
    name="secrets",
    variables={
        "PYPI_URL": "http://localhost:6006",
        "PYPI_USERNAME": "admin",
        "PYPI_PASSWORD": "password",
        "IMAGE_REGISTRY": "localhost:5000",
    }
)


load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Python rules:
http_archive(
    name="rules_python",
    sha256="9fcf91dbcc31fde6d1edb15f117246d912c33c36f44cf681976bd886538deba6",
    strip_prefix="rules_python-0.8.0",
    url="https://github.com/bazelbuild/rules_python/archive/refs/tags/0.8.0.tar.gz",
)


# Install Python:
load("@rules_python//python:repositories.bzl", "python_register_toolchains")
python_register_toolchains(
    name="python",
    # Available versions are listed in @rules_python//python:versions.bzl.
    python_version="3.10.2",
)
load("@python//:defs.bzl", "interpreter")


# Create a central repo that knows about the dependencies needed from Pipfile.lock
# Each dependency will only be loaded if needed by a target.
load("//tools/pipenv:defs.bzl", "pipenv_parse")
pipenv_parse(
    name="python_deps",
    pipfile="//:Pipfile",
    pipfile_lock="//:Pipfile.lock",
    python_interpreter_target=interpreter,
)

# Create repos for each dependency in python_deps
load("@python_deps//:requirements.bzl", "install_deps")
install_deps()


# Install skylib
http_archive(
    name="bazel_skylib",
    urls=[
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.2.0/bazel-skylib-1.2.0.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.2.0/bazel-skylib-1.2.0.tar.gz",
    ],
    sha256="af87959afe497dc8dfd4c6cb66e1279cb98ccc84284619ebfec27d9c09a903de",
)


# Docker rules:
http_archive(
    name="io_bazel_rules_docker",
    sha256="85ffff62a4c22a74dbd98d05da6cf40f497344b3dbf1e1ab0a37ab2a1a6ca014",
    strip_prefix="rules_docker-0.23.0",
    urls=["https://github.com/bazelbuild/rules_docker/releases/download/v0.23.0/rules_docker-v0.23.0.tar.gz"],
)

load("@io_bazel_rules_docker//repositories:repositories.bzl", container_repositories="repositories")
container_repositories()

load("@io_bazel_rules_docker//repositories:deps.bzl", container_deps="deps")
container_deps(go_repository_default_config="@//:WORKSPACE.bazel")


load("//tools/docker:repositories.bzl", local_container_repositories="repositories")
local_container_repositories()
