load("//tools/python/base:library.bzl", "python_library")
load("//tools/python/base:entrypoint.bzl", "python_entrypoint")

python_library(
    name="lib",
    srcs=glob(["**/*.py"]),
    deps=["//experiment/library:lib"],
    import_path="..",
    visibility=["//visibility:public"],
)


python_entrypoint(
    name="run",
    deps=[":lib"],
    entrypoint="application",
    interpreter="@python310//:python",
    visibility=["//visibility:public"],
)
