load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("//tools/docker:repositories.bzl", "image")

container_image(
    name="search_python_base",
    base=image("python_base"),
    env={
        "LC_ALL": "C.UTF-8",
        "LANG": "C.UTF-8",
        "PIP_NO_CACHE_DIR": "false",
    },
    workdir="/app",
    visibility=["//visibility:public"],
)
