load("@python_deps//:requirements.bzl", "requirement")
load("//tools/library:defs.bzl", "python_library")
# load("//tools/pylint:defs.bzl", "pylint_test")


python_library(
    name="api",
    deps=[
        requirement("fastapi"),
        "//src/core/logging:logging",
    ],
    test_deps=[
        requirement("pytest"),
        requirement("requests"),
    ],
    imports=["../.."],
    visibility=["//visibility:public"],
)


# pylint_test(
#     name="api_pylint",
#     srcs=glob(["**/*.py"]),
#     deps=[":api"],
#     pylintrc="//tools/pylint:.pylintrc",
# )
