load("@python_deps//:requirements.bzl", "requirement")
load("//tools/library:defs.bzl", "python_library")


python_library(
    deps=[
        requirement("fastapi"),
        "//src/core/logging:lib",
    ],
    test_deps=[
        requirement("pytest"),
        requirement("requests"),
    ],
    imports=["../.."],
    visibility=["//visibility:public"],
)
