load("@python_deps//:requirements.bzl", "requirement")
load("//tools/python/library:defs.bzl", "python_library", "wheel")


python_library(
    deps=[
        requirement("fastapi"),
        "//src/core/logging:lib",
    ],
    test_deps=[
        requirement("pytest"),
        requirement("requests"),
    ],
    imports=["../.."],
    visibility=["//visibility:public"],
    version="0.1.0",
    wheel=wheel(
        name="core.api",
        requires=[
            "fastapi==0.68.2",
            "core.logging",
        ]
    )
)
