load("@python_deps//:requirements.bzl", "requirement")
load("//tools/library:defs.bzl", "python_library")


python_library(
    name="elasticsearch",
    deps=[
        requirement("elasticsearch"),
        requirement("pydantic"),
    ],
    test_deps=[
        requirement("pytest"),
        requirement("types-requests"),
    ],
    imports=["../.."],
    visibility=["//visibility:public"],
)
