load("@python_deps//:requirements.bzl", "requirement")
load("//tools/python/library:defs.bzl", "python_library", "wheel")


python_library(
    deps=[
        requirement("elasticsearch"),
        requirement("pydantic"),
    ],
    test_deps=[
        requirement("pytest"),
        requirement("types-requests"),
    ],
    imports=["../.."],
    visibility=["//visibility:public"],
    version="0.1.0",
    wheel=wheel(
        name="core.elasticsearch",
        requires=["elasticsearch>=7.16,<8", "pydantic>=1.9,<2"],
    )
)
