load("@python_deps//:requirements.bzl", "requirement")
load("//tools/library:defs.bzl", "python_library")


python_library(
    deps=[
        requirement("loguru"),
    ],
    test_deps=[
        requirement("pytest"),
        requirement("loguru-mypy"),
    ],
    imports=["../.."],  # Allow importing as `from core.logging import *`
    visibility=["//visibility:public"],
)
