load("@python_deps//:requirements.bzl", "requirement")
load("//tools/library:defs.bzl", "python_library")


python_library(
    name="api",
    deps=[
        "//src/users/content_type:content_type",
        "//src/core/api:api",
        requirement("uvicorn"),
    ],
    test_deps=[
        requirement("pytest"),
        requirement("pytest-asyncio"),
        requirement("pytest-docker"),
        requirement("types-requests"),
    ],
    test_data=["tests/docker-compose.yml"],
    imports=["../.."],
    visibility=["//visibility:public"],
)
