load("@python_deps//:requirements.bzl", "requirement")
load("//tools/library:defs.bzl", "python_library")


python_library(
    name="content_type",
    deps=[
        "//src/core/elasticsearch"
    ],
    test_deps=[
        requirement("pytest"),
    ],
    imports=["../.."],
    visibility=["//visibility:public"],
)
