load("@python_deps//:requirements.bzl", "requirement")
load("//tools/library:defs.bzl", "python_library")


python_library(
    deps=[
        "//src/core/elasticsearch:lib"
    ],
    test_deps=[
        requirement("pytest"),
    ],
    imports=["../.."],
    visibility=["//visibility:public"],
)
