load("@python_deps//:requirements.bzl", "requirement")

exports_files(
    [
        "black_wrapper.py",
    ]
)


py_binary(
    name="black",
    srcs=["black_wrapper.py"],
    main="black_wrapper.py",
    deps=[
        requirement("black"),
    ],
    data=[
        "//:pyproject.toml"
    ],
    visibility=["//visibility:public"],
    python_version="PY3",
)
